fix: body offset height, images size reduced to small, slider images not stretched

--- a/src/components/MainComponents/LightBox/LightBox.module.scss
+++ b/src/components/MainComponents/LightBox/LightBox.module.scss
@@ -119,5 +119,5 @@
 .sliderImg {
   height: 100%;
   margin: 0 auto;
-  object-fit: cover;
+  object-fit: contain;
 }
