--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,6 @@ body {
   font-family: var(--font-base);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 a {
@@ -71,7 +70,6 @@ img {
     position: absolute;
     text-align: center;
     top: 0;
-    white-space: break-spaces;
     width: inherit;
   }
 }
@@ -80,8 +78,6 @@ img {
   background-image: linear-gradient(150.57deg,#d3e4f3 21.26%,#e8ecef 85.79%);
   min-height: 100vh;
   position: relative;
-  overflow-y: scroll;
-  height: 100vh;
 }
 
 .modal-active {
